# Aframp-backend

./: .dockerignore  .env.example  .gitignore  CICD_TESTING.md  Cargo.toml  DATABASE_OPTIMIZATIONS.md  Dockerfile  LOGGING_ENHANCEMENT_SUMMARY.md  LOGGING_GUIDE.md  MIGRATION_TROUBLESHOOTING.md  REQUEST_LOGGING_GUIDE.md  RUNNING_THE_SERVER.md  SERVER_LOGGING_SUMMARY.md  STELLAR_INTEGRATION.md  demo-logging.sh  fix-migrations-checksums.sh  fix-migrations-simple.sh  fix-migrations.sh  reset-migrations.sh  run-server.sh  test-pipeline.sh
.github/workflows/: ci-cd.yml  validate.yml
db/: seed_benchmark_data.sql
examples/: logging_usage.rs  stellar_demo.rs
migrations/: 20260209050000_afri_operations_and_rates_schema.sql  20260209070000_indexes_constraints_performance.sql  PERFORMANCE.md
src/: error.rs  health.rs  lib.rs  logging.rs  main.rs
src/auth/: handlers.rs
src/database/: bill_payment_repository.rs  conversion_audit_repository.rs  error.rs  exchange_rate_repository.rs  fee_structure_repository.rs  mod.rs  payment_repository.rs  repository.rs  transaction.rs  transaction_repository.rs  trustline_operation_repository.rs  trustline_repository.rs  wallet_repository.rs  webhook_repository.rs
src/metrics/: mod.rs
src/middleware/: api_key.rs  error.rs  logging.rs  mod.rs
src/payments/: error.rs  factory.rs  provider.rs  traits.rs  types.rs  utils.rs
src/services/: afri_payment_builder.rs  afri_trustline.rs  conversion_audit.rs  fee_structure.rs  mod.rs  trustline_operation.rs
src/workers/: mod.rs  transaction_monitor.rs
tests/: db_query_benchmarks.rs
(+19 files in other folders)
