[package]
name = "Bitmesh-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
stellar_sdk = "0.1.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
